--- a/training.ipynb
+++ b/training.ipynb
@@ -15,7 +15,6 @@
         "VkKkQ4SazNBo",
         "7WPFM0kz2hoF",
         "NiQx-JJotPPz",
-        "usAV1Y-Qth72",
         "GZJuNQEk5pTz",
         "BkMyK0xO5uPr",
         "kxKQFWV_toOq",
@@ -1021,7 +1020,6 @@
         "def train_and_test(model, train_loader, test_loader, optimizer, scheduler, \n",
         "                   use_forces=False, energy_coeff=None, \n",
         "                   epochs=100, starting_epoch=1, save_every=5,\n",
-        "                   early_stopping_starting_epoch=100, patience=100,\n",
         "                   name=None, description=None):\n",
         "  if name == None:\n",
         "    name = \"SchNet\"\n",
@@ -1040,26 +1038,7 @@
         "    train_maes.append(train_mae)\n",
         "    test_maes.append(test_mae)\n",
         "    print(f\"Energy MAE: train {train_mae} eV, test {test_mae} eV\")\n",
-        "    if epoch <= early_stopping_starting_epoch:\n",
-        "      lowest_test_mae = test_mae\n",
-        "      save_model_flag = True\n",
-        "    else:\n",
-        "      print('Early stopping active')\n",
-        "      if test_mae < lowest_test_mae:\n",
-        "        epochs_not_improved = 0\n",
-        "        lowest_test_mae = test_mae\n",
-        "        save_model_flag = True\n",
-        "        print('MAE has decreased, saving the model')\n",
-        "      else:\n",
-        "        epochs_not_improved += 1\n",
-        "        save_model_flag = False\n",
-        "        if epochs_not_improved > patience:\n",
-        "          print('Patience has been finished: end of the training')\n",
-        "          break\n",
-        "        else:\n",
-        "          print('MAE has not decreased for ' + str(epochs_not_improved) + ' epochs, go on without saving the model')\n",
-        "    if save_model_flag == True:\n",
-        "      save_model(name=name, description=description, epoch=epoch, train_err=train_mae, test_err=test_mae)\n",
+        "    save_model(name=name, description=description, epoch=epoch, train_err=train_mae, test_err=test_mae)\n",
         "    scheduler.step(test_mae)"
       ],
       "execution_count": null,
@@ -1117,6 +1096,15 @@
       },
       "source": [
         "## Instantiate model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J0H6Y5x-jjlT"
+      },
+      "source": [
+        "**You should instantiate only one of the models for training**"
       ]
     },
     {
@@ -1208,7 +1196,7 @@
         "id": "B5Lz3enDtluj"
       },
       "source": [
-        "Copy-paste the content of the cell used to instantiate the model in the following variable to allow for saving of hyperparameters in the checkpoint"
+        "Copy-paste the content of the cell used to instantiate the model in the following variable to allow for saving of hyperparameters in the checkpoint file"
       ]
     },
     {
@@ -1727,6 +1715,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ze-1OZfRjz1k"
+      },
+      "source": [
+        "When starting training from a previously restored checkpoint, edit the starting_epoch parameter to match the correct next epoch number"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "-G4PXuDW9Hgt"
@@ -1735,7 +1732,6 @@
         "train_and_test(model, train_loader, test_loader, optimizer, scheduler, \n",
         "               use_forces=use_forces, energy_coeff=energy_coeff,\n",
         "               epochs=max_epochs, starting_epoch=1, save_every=1,\n",
-        "               early_stopping_starting_epoch=40, patience=10,\n",
         "               name=model_name, description=model_description)"
       ],
       "execution_count": null,
